--- a/products.html
+++ b/products.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Tech</title>
+    
     <!-- Bootstrap Link Connect -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
@@ -181,8 +182,8 @@
         </div>
     </section>
 
-<!-- Bootstrap Script Connect -->
-<script src="js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap Script Connect -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 <!-- Fontawesome Link -->
 <script src="https://kit.fontawesome.com/149adfc48b.js" crossorigin="anonymous"></script>
